test/library/packages/LinearAlgebra/correctness/dependencies/testCholeskyComplexError.good
testCholeskyComplexError.chpl:7: error: halt reached - Matrix passed must be hermitian positive definite 
